--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Cinemas List</title>
-</head>
-<body>
+    <link href="/data/favicon.ico" rel="icon" type="image/x-icon" />
+  </head>
+  <body>
     <main></main>
-</body>
+  </body>
 </html>
